examples/policies/getting-started/kafka.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "enable outposts to consume empire-announce"
metadata:
  name: "rule2"
spec:
  endpointSelector:
    matchLabels:
      app: kafka
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: empire-outpost
    toPorts:
    - ports:
      - port: "9092"
        protocol: TCP
      rules:
        kafka:
        - apiKey: "fetch"
          topic: "empire-announce"
        - apiKey: "apiversions"
        - apiKey: "metadata"
        - apiKey: "findcoordinator"
        - apiKey: "joingroup"
        - apiKey: "leavegroup"
        - apiKey: "syncgroup"
        - apiKey: "offsets"
        - apiKey: "offsetcommit"
        - apiKey: "offsetfetch"
        - apiKey: "heartbeat"
