examples/policies/getting-started/l3-l4-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-l4-rule"
spec:
  endpointSelector:
    matchLabels:
      id: web-server
  ingress:
  - fromEndpoints:
    - matchLabels:
        id: goodclient
    toPorts:
    - ports:
      - port: '8181'
        protocol: TCP
